RIPE NCC has merged 81e06b1
* Fix deploy-check script to include head refs [c20fe531]
* Fix spelling [07d51e00]
* Rename Unknown to Not Found in email templates and code around them [4fbe7ed1]
* chore(deps): update dependency org.eclipse.jgit:org.eclipse.jgit to v7.4.0.202509020913-r [8619385b]
* chore(deps): update dependency io.sentry:sentry-bom to v8.23.0 [a0a98f8b]
* chore(deps): update dependency io.freefair.lombok:io.freefair.lombok.gradle.plugin to v9 [e2ccb024]
* chore(deps): update dependency io.sentry:sentry-bom to v8.22.0 [f96d52fc]
* chore(deps): update dependency org.postgresql:postgresql to v42.7.8 [87b420fd]
* Use nCipherKM version 13.6.12 [a10059fb]
* Cleanup [0a945174]
* Apply sonarqube [961b6b48]
* Revert broken tests [fecf950e]
* Fix EqualsAndHashCode [20dfa20d]
* Make UpdateAspaConfigurationCommand a bit more clear, add tests [211f326f]
* Add ASPA notation https://datatracker.ietf.org/doc/draft-ietf-sidrops-aspa-notation/ [4e7314bd]
* Add test [2518b1cd]
* Process empty case specially [4c7b28a0]
* chore(deps): update dependency com.google.code.gson:gson to v2.13.2 [9489022f]
* chore(deps): update dependency io.sentry:sentry-bom to v8.21.1 [14527f3b]
* hsm: inline `$spring_boot_version` [fcd47503]
* rpki-commons: 1.40 -> 1.41 [cd535c1e]
* chore(deps): update dependency org.sonarqube:org.sonarqube.gradle.plugin to v6.3.1.5724 [a67e6b6e]
* chore(deps): update dependency com.gorylenko.gradle-git-properties:com.gorylenko.gradle-git-properties.gradle.plugin to v2.5.3 [e668ff7f]
* chore(deps): update actions/setup-java action to v5 [9f79a49b]
* chore(deps): update dependency io.freefair.lombok:io.freefair.lombok.gradle.plugin to v8.14.2 [b1645b70]
* chore(deps): update dependency io.sentry:sentry-bom to v8.19.1 [435c3652]
* chore(deps): update actions/checkout action to v5 [2bee2f72]