@@ -16,14 +16,34 @@ public class UpdateAspaConfigurationCommandTest {
     @Test
     public void getCommandSummary() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(
-            new VersionedId(1),
-            "etag",
-            Collections.singletonList(new AspaConfigurationData(
-                Asn.parse("AS13"),
-                List.of(Asn.parse("AS1234"))
-            ))
+                new VersionedId(1),
+                "etag",
+                Collections.singletonList(new AspaConfigurationData(
+                        Asn.parse("AS13"),
+                        List.of(Asn.parse("AS4321"), Asn.parse("AS1234"))
+                ))
         );
 
-        assertThat(command.getCommandSummary()).isEqualTo("Update ASPA configuration to: AS13 -> AS1234.");
+        assertThat(command.getCommandSummary()).isEqualTo("Update ASPA configuration to: AS13 => AS1234, AS4321.");
+    }
+
+    @Test
+    public void getCommandSummaryEmptyProvidersList() {
+        UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(
+                new VersionedId(1), "etag", Collections.emptyList());
+
+        assertThat(command.getCommandSummary()).isEqualTo("Update ASPA configuration to: empty.");
+    }
+
+    @Test
+    public void aspaConfigurationIETF() {
+        var aspa = new AspaConfigurationData(Asn.parse("AS13"), List.of(Asn.parse("AS4321"), Asn.parse("AS1234")));
+        assertThat(AspaConfigurationData.inIETFNotation(aspa)).isEqualTo("AS13 => AS1234, AS4321");
+    }
+
+    @Test
+    public void aspaConfigurationIETF_Empty() {
+        var aspa = new AspaConfigurationData(Asn.parse("AS13"), List.of());
+        assertThat(AspaConfigurationData.inIETFNotation(aspa)).isEmpty();
     }
 }
